--- a/games/invest_game/templates/question5.html
+++ b/games/invest_game/templates/question5.html
@@ -110,7 +110,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary questionnaire-submit-btn">
-      Next
+      End of Survey
     </button>
   </form>
 </div>
